feat: ecommerce in responsive mode (#6)
feat: adjusting navigation bar
feat: adjusting the category section
feat: Adjusting the About Us section
feat: Adjusting the Product section
feat: Adjusting the Footer section
fix: Nosotros page now is responsive
fix: Adding styles for blog and entrada
- into HTMLs add new class to center content
- in CSS add new class

fix: Galery area is now responsive
- add galeria.html to the project
- add styles into app.css into galery section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "livePreview.defaultPreviewPath": "/05-RWD/index.html",
     "css.styleSheets": [
-        "css/*.css"
+        "./css/*.css"
     ]
 }
